# uav_trajectory_control

./: .gitignore  CMakeLists.txt  README  package.xml  setup.py
cfg/: odometry.rviz
config/uav1/: inertial.yaml
launch/: ard_launch.launch  ard_launch_multi.launch  ard_mission_simple_local.launch  cascaded_pid_dp_controller.launch  mavros.launch  takeoff_test.launch
msg/: Trajectory.msg  WaypointSet.msg
scripts/: cascaded_pid_dp_controller.py  demo_wp_trajectory_generator.py  dummy_node.py  local_planner.py  odom_redirect.py  offboard_ard_mission.py  pose_redirect.py  takeoff_test.py  temp.py  waypoints_2
src/uav_control_interfaces/: __init__.py  dp_controller_base.py  dp_controller_local_planner.py  dp_pid_controller_base.py  vehicle.py
src/uav_trajectory_generator/: trajectory_generator.py  trajectory_point.py  wp_trajectory_generator.py
src/uav_trajectory_generator/path_generator/: bezier_curve.py  cs_interpolator.py  dubins_interpolator.py  helical_segment.py  line_segment.py  linear_interpolator.py  lipb_interpolator.py  path_generator.py
src/uav_waypoints/: waypoint.py  waypoint_set.py
srv/: AddWaypoint.srv  GetWaypoints.srv  GoTo.srv  GoToIncremental.srv  InitWaypointSet.srv  InitWaypointsFromFile.srv
test/: test_all.launch  test_trajectory_point.py  test_waypoint.py  test_waypoint_set.py
